--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="row m-0">
-    <div class="d-flex w-100 justify-content-between">
+    <div class="d-flex w-100 justify-content-between container-body">
       <div class="col-md-3 p-0 container-card mat-elevation-z5 border-secondary">
         <div class="d-flex flex-row text-center body-card">
           <i class="fa fa-5x fa-handshake-o text-secondary" style="width: 30%"></i>
@@ -79,7 +79,7 @@
 
   <br>
 
-  <div class="row m-0 d-flex justify-content-between">
+  <div class="row m-0 d-flex justify-content-between container-body">
     <div class="col-md-6 mat-elevation-z5 container-charts container-chart-col-6">
       <h6 class="font-weight-bolder text-center">Top 10 | Itens Adquiridos</h6>
       <div class="chartdivPie1" style="height: 450px"></div>
