--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="showProgress" mode="indeterminate"></mat-progress-bar>
 <div class="container w-100 h-100 d-flex justify-content-center align-items-center">
   <div class="col-md-5">
     <mat-card style="width: 400px; height: 400px;" class="d-flex justify-content-between flex-column">
@@ -32,7 +33,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <a href="#" class="text-center" style="color: #222d43">Esqueceu sua senha?</a>
+            <a href="#/login"  class="text-center" style="color: #222d43">Esqueceu sua senha?</a>
           </div>
 
           <div class="row justify-content-center">
