--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -4,7 +4,8 @@
       <i class="fa fa fa-bars"></i>
     </button>
     <img src="../../assets/utfpr.jpg" alt="logo_constru" style="width: 40px">
-    <a routerLinkActive="active" routerLink="/" style="margin-left: 10px; color: white; text-decoration: none">Sistema de Gerenciamento do DAINF</a>
+    <a *ngIf="widthScreen >= 600" routerLinkActive="active" routerLink="/" style="margin-left: 10px; color: white; text-decoration: none">Sistema de Gerenciamento do DAINF</a>
+    <a *ngIf="widthScreen < 600" routerLinkActive="active" routerLink="/" style="margin-left: 10px; color: white; text-decoration: none">Lab DAINF</a>
   </div>
   <button class="btn-sidenav">
     <a (click)="logout()" class="d-flex"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
