--- a/src/app/saida/saida.list.component.html
+++ b/src/app/saida/saida.list.component.html
@@ -60,7 +60,7 @@
               <button class="btn btn-outline-primary rounded"
                       type="button"
                       pTooltip="Remover"
-                      (click)="delete(row.id)">
+                      (click)="preDelete(row)">
                 <i class="fa fa-trash-o"></i>
               </button>
             </mat-cell>
