--- a/src/app/item/item.form.component.html
+++ b/src/app/item/item.form.component.html
@@ -1,13 +1,24 @@
 <div class="container-fluid my-3">
   <mat-card>
     <mat-card-title>
-      <div class="d-flex align-items-center">
-        <app-voltar (onClick)="back()"></app-voltar>
-        <h4 class="m-0">Cadastro de Item</h4>
+      <div class="d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center">
+          <app-voltar (onClick)="back()"></app-voltar>
+          <h4 class="m-0">Cadastro de Item</h4>
+        </div>
+        <div *ngIf="object.id != null">
+          <button type="button"
+                  pTooltip="Imagens"
+                  (click)="showDialogImagens()"
+                  mat-icon-button>
+            <i class="fa fa-2x fa-image"></i>
+          </button>
+        </div>
       </div>
     </mat-card-title>
     <mat-card-content>
-      <form #form="ngForm" (submit)="save()">
+      <form #form="ngForm" (submit)="preSave()"
+            enctype="multipart/form-data">
         <div class="row">
           <div class="col-md-2">
             <div class="form-group">
@@ -165,6 +176,27 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-md-12">
+            <p-fileUpload name="anexos[]"
+                          #fileUpload
+                          [url]="getUrlUploadImages()"
+                          (onUpload)="onUpload($event)"
+                          multiple="multiple"
+                          [showUploadButton]="false"
+                          chooseLabel="Inserir Imagens"
+                          cancelLabel="Remover"
+                          accept="image/*"
+                          maxFileSize="1000000">
+              <ng-template pTemplate="content">
+                <ul *ngIf="uploadedFiles.length">
+                  <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+                </ul>
+              </ng-template>
+            </p-fileUpload>
+          </div>
+        </div>
+
         <div *ngIf="!isAlunosOrProfessor" class="row">
           <div class="col-md-12 d-flex justify-content-end">
             <app-cancelar (onClick)="back()"></app-cancelar>
@@ -175,3 +207,27 @@
     </mat-card-content>
   </mat-card>
 </div>
+
+<p-dialog header="Imagens do Item"
+          [(visible)]="dialogImagens"
+          [style]="{minWidth: '400px'}"
+          [baseZIndex]="10000">
+
+  <p-carousel [value]="images"
+              styleClass="custom-carousel"
+              [numVisible]="3"
+              [numScroll]="1"
+              [circular]="true"
+              [autoplayInterval]="3000"
+              [responsiveOptions]="responsiveOptions">
+    <ng-template let-image pTemplate="item">
+      <div class="car-details">
+        <div class="p-grid p-nogutter">
+          <div class="p-col-12">
+            <img src="assets/logo.png"/>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+  </p-carousel>
+</p-dialog>
