--- a/src/app/emprestimo/emprestimo.list.component.html
+++ b/src/app/emprestimo/emprestimo.list.component.html
@@ -180,3 +180,7 @@
     </p-footer>
   </form>
 </p-dialog>
+
+<!--<div class="invisible">-->
+<!--  <p-calendar #novaData [baseZIndex]="99999" [touchUI]="true"></p-calendar>-->
+<!--</div>-->
