--- a/src/app/grupo/grupo.form.component.html
+++ b/src/app/grupo/grupo.form.component.html
@@ -35,6 +35,7 @@
           <div class="col-md-10">
             <div class="form-group">
               <label for="descricao">Descrição</label>
+              <span class="field-required">*</span>
               <input type="text"
                      id="descricao"
                      name="descricao"
